--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
@@ -197,13 +197,13 @@ body {
     margin-top: 6px;
 
     &:hover {
-        color: @textColorWhite;
+        color: @textColorBlack;
     }
 
     md-icon {
         width: 17px;
         height: 17px;
-        fill: @textColorWhite;
+        fill: @textColorBlack;
     }
 }
 
@@ -473,6 +473,11 @@ md-input-container label:not(.md-container-ignore).md-required:after {
 }
 md-icon {
     margin:0;
+    min-height: 0;
+    min-width: 0;
+    width:auto;
+    height: auto;
+
 }
 .r-table {
     display: table;
