--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/layout.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/layout.less
@@ -1,4 +1,4 @@
-﻿@import "variables.less";
+﻿@import "themeLight.less";
 @sideBarWidth: 250px;
 
 .page-header-fixed .page-container {
@@ -666,7 +666,7 @@ Page Loading
         .login-option {
             &.facebook, &.google {
                 width: 200px;
-                color: @textColorWhite;
+                color: @textColorBlack;
                 text-decoration: none;
                 margin-bottom: 20px;
                 font-size: 18px;
@@ -683,7 +683,7 @@ Page Loading
                     width: 25px;
                     height: 25px;
                     margin-left: 10px;
-                    fill: @textColorWhite;
+                    fill: @textColorBlack;
                 }
             }
 
@@ -712,7 +712,7 @@ Page Loading
         padding: 8px;
         border-radius: 16px;
         width: 200px;
-        color: @textColorWhite;
+        color: @textColorBlack;
         text-decoration: none;
         margin-bottom: 20px;
         font-size: 18px;
