--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/quiz.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/quiz.less
@@ -1,8 +1,8 @@
-﻿@import "variables.less";
+﻿@import "themeLight.less";
 
 .quizPage {
     .fullPageElelment();
-    color: @textColorBlack;
+    color: @textColorWhite;
     /*-webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
@@ -186,7 +186,7 @@
     .retake {
         width: 100%;
         background: @buttonColorBlue;
-        color: @textColorWhite;
+        color: @textColorBlack;
         border-radius: 10px;
         padding: 2px 0;
         font-size: 24px;
@@ -194,7 +194,7 @@
 
     .black-bullet {
         background: @borderColorDarkGrey;
-        color: @textColorWhite;
+        color: @textColorBlack;
         text-align: center;
         border-radius: 10px;
         margin-bottom: 15px;
@@ -315,7 +315,7 @@
         textarea {
             width: 100%;
             margin-bottom: 10px;
-            color: @textColorBlack;
+            color: @textColorWhite;
         }
     }
     //comment section
@@ -409,7 +409,7 @@
 
     .answer-selected {
         background: @backgroundColorSpitballBlue;
-        color: @textColorWhite;
+        color: @textColorBlack;
     }
 }
 
@@ -536,7 +536,7 @@
 
         .scared {
             background: @backgroundColor2;
-            color: @textColorWhite;
+            color: @textColorBlack;
         }
     }
 }
@@ -546,7 +546,7 @@
 }
 
 .quiz-wrapper {
-    color: @textColorBlack;
+    color: @textColorWhite;
     border-radius: 10px;
     background: #fff;
     box-shadow: 0 3px 8px rgba(0, 0, 0, 0.2);
@@ -573,7 +573,7 @@
         display: none;
         text-align: center;
         background: @backgroundColorRed;
-        color: @textColorWhite;
+        color: @textColorBlack;
         font-size: 20px;
     }
 
@@ -584,7 +584,7 @@
 
         .correct-answer {
             background: @backgroundColorSpitballBlue;
-            color: @textColorWhite;
+            color: @textColorBlack;
 
             &:before {
                 content: '\2714';
