--- a/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Feed.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Feed.cshtml
@@ -21,7 +21,7 @@
                 <input id="open-share" type="checkbox" user-not-register-popup="click" />
                 <label class="title" for="open-share" ng-click="b.settingsOpen = b.inviteOpen = false">
                     <span class="wrapper" scroll-to-top>
-                        <md-icon md-svg-icon="t:chat" class="option-icon"></md-icon>
+                        <md-icon md-svg-icon="t:share" class="option-icon"></md-icon>
                         @*@Html.Svg("~/images/site/icons.svg", "share", new {@class = "option-icon"})*@
                         <span class="text">@UserResources.Share</span>
                     </span>
