--- a/Zbang.Cloudents.Mvc4WebRole/Views/Quiz/CreateQuiz.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Quiz/CreateQuiz.cshtml
@@ -2,7 +2,7 @@
 @using QuizResources = Zbang.Cloudents.Mvc4WebRole.Views.Quiz.Resources.QuizResources
 
 
-<header class="backgroundTC19 borderTC45" layout="row">
+<header class="" layout="row">
     <div flex class="text-center text-capitalize">@GeneralResources.CreateQuiz</div>
     <button flex="none" type="button" ng-click="q.close($event)" class="close" ga-track-event="['createQuiz', 'close']"><md-icon md-svg-icon="t:close"></md-icon>@*@Html.Svg("~/images/site/icons.svg", "close")*@</button>
 </header>
