--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.less
@@ -1,4 +1,4 @@
-﻿@import "variables.less";
+﻿@import "themeLight.less";
 
 .folder-selected {
     .folder-name {
@@ -62,7 +62,7 @@
 .folders .folder-name .content {
     //padding: 2px 6px;
     text-align: center;
-    color: @textColorWhite;
+    color: @textColorBlack;
 
     div:last-child {
         margin-top: 3px;
@@ -71,7 +71,8 @@
 
 .folder-selected {
     margin-bottom: 20px;
-
+    margin-right: 8px;
+    margin-left: 8px;
     .md-menu {
         padding: 0;
 
@@ -103,12 +104,13 @@
 .search-box {
     width: 100%;
     display: inline-block;
+    padding: 0 8px;
     //.placeHolder(@textColorBlack);
     input {
         border: 5px solid @buttonColorBlue;
         //border: 10px solid @backgroundColorMenu;
         background: #f5f5f5;
-        color: @backgroundColorMouseOver;
+        color: @textColorWhite;
         margin-top: -15px;
         border-radius: 0 0 4px 4px;
         width: 200px;
@@ -157,8 +159,13 @@
         -ms-word-break: break-word;
         word-break: break-word;
         //font-weight: bold;
-    }
 
+        @media(min-width: 600px) {
+            &.multi-line-ellipsis.limit-two {
+                -webkit-line-clamp: 1;
+            }
+        }
+    }
 }
 
 .add svg {
@@ -243,6 +250,15 @@
     //background: @backgroundColorFollow;
     border-radius: 5px;
     padding: 5px 10px;
+    align-items: flex-start;
+
+    .notificationButton {
+        margin: 3px 0;
+    }
+}
+
+.box-nav-bar ~ div{
+    margin: 0 -8px;
 }
 
 .invite-btn {
