--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/feed.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/feed.less
@@ -1,4 +1,4 @@
-﻿@import "variables.less";
+﻿@import "themeLight.less";
 
 @feedActionsBackground: #d7dde0;
 @userImageIndent: 62px;
@@ -7,10 +7,6 @@
     font-size: 16px;
     line-height: 1;
     padding: 8px !important;
-
-    @media(max-width: 600px) {
-        padding: 0 0 8px 0 !important;
-    }
 
     .box-options {
         width: 100%;
@@ -55,7 +51,7 @@
             }
 
             &:not(.disabled):hover {
-                background: @textColorWhite;
+                background: #f5f5f5;
             }
 
 
@@ -89,7 +85,7 @@
                     .align-items(center);
                 }
 
-                svg, md-icon {
+                md-icon {
                     width: 16px;
                     height: 16px;
                     fill: @buttonColorBlue;
@@ -149,7 +145,7 @@
                     .displayFlex;
                     .align-items(center);
 
-                    svg, md-icon {
+                    md-icon {
                         width: 16px;
                         height: 16px;
                     }
@@ -174,7 +170,7 @@
                         padding: 0 5px;
                         width: 100%;
 
-                        svg, md-icon {
+                        md-icon {
                             margin: 0 auto;
 
                             &.whatsapp {
@@ -212,7 +208,7 @@
             width: 100%;
             margin: 0;
 
-            svg, md-icon {
+            md-icon {
                 fill: @buttonColorBlue;
                 display: block;
             }
@@ -220,21 +216,21 @@
             &.invite {
                 background: none;
 
-                svg, md-icon {
+                md-icon {
                     width: 20px;
                     height: 20px;
                 }
             }
 
             &.box-settings {
-                svg, md-icon {
+                md-icon {
                     width: 18px;
                     height: 18px;
                 }
             }
 
             &.invite, &.box-settings {
-                svg, md-icon {
+                md-icon {
                     flex-shrink: 0;
                 }
             }
@@ -336,7 +332,7 @@
                 padding: 5px;
                 position: relative;
 
-                svg, md-icon {
+                md-icon {
                     width: 100%;
                     height: 100%;
                     fill: rgba(93,96,99,0.15);
@@ -372,26 +368,26 @@
                 font-size: 14px;
             }
 
-            .like-btn svg {
+            .like-btn md-icon {
                 margin-bottom: 4px;
             }
 
-            .comment-btn svg {
+            .comment-btn md-icon {
                 margin-bottom: 2px;
             }
 
-            svg {
+            md-icon {
                 fill: @buttonColorBlue;
             }
 
-            .like-icon svg {
+            .like-icon md-icon {
                 fill: @textColorGrey;
             }
 
             &.liked {
                 color: @buttonColorBlue;
 
-                svg {
+                md-icon {
                     fill: @buttonColorBlue;
                 }
             }
@@ -487,9 +483,9 @@
             }
         }
 
-        svg {
+        md-icon {
             width: 25px;
-            height: 35px;
+            height: 25px;
             vertical-align: middle;
         }
 
@@ -553,11 +549,11 @@
         }
 
         .user-name, .reply .user-name {
-            color: @textColorBlack;
+            color: @textColorWhite;
         }
 
         .user-name {
-            color: @textColorBlack;
+            color: @textColorWhite;
             font-weight: 400;
             margin-top: 0;
             padding-bottom: 12px;
@@ -580,7 +576,7 @@
             margin: 0;
             padding: 0 4px;
 
-            svg {
+            md-icon {
                 width: 17px;
                 height: 17px;
             }
@@ -624,19 +620,15 @@
                 border: none;
                 padding: 14px 0 10px 10px;
 
-                &.ng-not-empty {
-                    color: @backgroundColorMouseOver;
-                }
-
-                &:focus {
-                    color: @backgroundColorMouseOver;
+                &.ng-not-empty,&:focus { 
+                    color: @headerbackground;
                 }
             }
         }
     }
 
     .actions, .reply-actions {
-        svg {
+        md-icon {
             width: 22px;
             height: 22px;
             fill: #777471;
@@ -668,7 +660,7 @@
             transform: scaleX(1) /*rtl:scaleX(-1)*/;
             -ms-filter: none /*rtl:fliph*/; /*IE*/
             filter: none /*rtl:fliph*/; /*IE*/
-            svg {
+            md-icon {
                 width: 22px;
                 height: 22px;
             }
@@ -707,7 +699,7 @@
             text-transform: capitalize;
             width: auto;
 
-            svg {
+            md-icon {
                 margin-bottom: 4px;
                 width: 15px;
                 height: 15px;
@@ -730,7 +722,7 @@
             margin: 0 5px 2px 0;
         }
 
-        .like-icon svg {
+        .like-icon md-icon {
             margin-bottom: 4px;
         }
 
@@ -771,14 +763,14 @@
 
         > .content-text {
             overflow: hidden;
-            color: @textColorBlack;
+            color: @textColorWhite;
         }
 
         > .actions-wrapper {
             background: @feedActionsBackground;
             padding: 8px 15px;
 
-            svg {
+            md-icon {
                 fill: #777471;
             }
         }
@@ -798,7 +790,7 @@
         line-height: 22px;
         word-wrap: break-word;
         white-space: pre-wrap;
-        color: @backgroundColor;
+        color: @headerbackground;
         margin: 6px 10px 10px 0;
 
         img {
@@ -836,7 +828,7 @@
     .feed-upload {
         padding: 0 20px 0 12px;
 
-        svg {
+        svg, md-icon {
             width: 22px;
             height: 22px;
             padding-bottom: 2px;
@@ -846,7 +838,7 @@
     .like-btn, .comment-btn {
         color: @textColorGrey;
 
-        svg {
+        md-icon {
             fill: @textColorGrey;
             width: 16px;
             height: 16px;
@@ -855,7 +847,7 @@
         .liked {
             color: @buttonColorBlue;
 
-            svg {
+            md-icon {
                 fill: @buttonColorBlue;
             }
         }
@@ -879,7 +871,7 @@
                 color: @buttonColorBlue;
             }
 
-            svg {
+            md-icon {
                 fill: @buttonColorBlue;
                 margin-bottom: 4px;
             }
@@ -933,7 +925,7 @@
             line-height: 0;
             height: @closeHeight;
 
-            svg {
+            md-icon {
                 width: @closeHeight;
                 height: @closeHeight;
             }
@@ -978,19 +970,19 @@
         }
     }
 
-    .share-fb svg {
+    .share-fb md-icon {
         width: 46px;
         height: 30px;
         .displayFlex;
     }
 
-    .share-whatsapp svg {
+    .share-whatsapp md-icon {
         width: 50px;
         height: 30px;
         border-left: 1px solid #fff;
     }
 
-    svg {
+    md-icon {
         padding: 0 8px;
     }
 
