--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/user.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/user.less
@@ -1,4 +1,4 @@
-﻿@import "variables.less";
+﻿@import "themeLight.less";
 
 .userPage {
     .portlet {
@@ -33,7 +33,7 @@
     .message {
         font-size: 16px;
         background: @svgQuizRanking;
-        color: @textColorWhite;
+        color: @textColorBlack;
         padding: 3px 13px;
         border-radius: 8px;
         margin: 20px 0 9px 0;
@@ -49,7 +49,7 @@
             width: 22px;
             height: 22px;
             margin-right: 10px;
-            fill: @textColorWhite;
+            fill: @textColorBlack;
         }
     }
 
