--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/libraryChoose.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/libraryChoose.less
@@ -17,6 +17,7 @@
         .displayFlex();
         font-weight: 700;
         overflow: hidden;
+        color: @textColorGrey;
 
         > div {
             margin-left: 15px;
@@ -31,10 +32,25 @@
 
         .img-circle {
             overflow: hidden;
+            background: @backgroundColorWhite;
         }
 
         .list-inline img {
             border-radius: 4px;
+        }
+    }
+
+    .code {
+        h4 {
+            color: @textColorWhite;
+        }
+
+        .closed-uni-i {
+            fill: @fileColor;
+        }
+
+        .uni-details {
+            color: @textColorWhite;
         }
     }
 
