--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/dashboard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/dashboard.less
@@ -69,7 +69,7 @@
         padding: 4px 9px;
         height: 24px;
         background-color: @backgroundColorRed;
-        color: @textColorWhite;
+        color: @textColorBlack;
     }
 
     .university {
@@ -90,6 +90,8 @@
             color: #fff;
             padding: 0 20px 6px;
             //align-self: auto;
+            color: @textColorBlack;
+
             .uni-name {
                 font-size: 24px;
             }
