--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/error.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/error.less
@@ -1,8 +1,9 @@
-﻿@import "../Site/variables.less";
+﻿@import "themeLight.less";
 
 .error-page {
     width: 100%;
     margin-top: 100px;
+
     @media (min-width: 960px) {
         margin-left: -125px;
     }
@@ -16,6 +17,7 @@
             font-size: 25px;
             display: block;
             text-transform: uppercase;
+            color: @textColorGrey;
         }
     }
 
@@ -48,6 +50,7 @@
     @media (min-width: 960px) {
         margin-left: -250px;
     }
+
     img {
         max-width: 240px;
         width: 95%;
@@ -69,9 +72,11 @@
             font-weight: bold;
             font-size: 25px;
             white-space: pre-line;
+            color: @textColorLike;
         }
 
         p {
+            color: @textColorWhite;
             font-size: 20px;
             margin: 10px 0;
         }
@@ -89,6 +94,7 @@
         h2 {
             font-weight: bold;
             font-size: 28px;
+            color: @buttonColorBlue;
         }
 
         p {
@@ -96,6 +102,7 @@
             line-height: 30px;
             max-width: 570px;
             margin: 0 auto;
+            color: @textColorWhite;
         }
     }
 
@@ -112,6 +119,7 @@
 
                 a {
                     display: block;
+                    color: @textColorWhite;
                 }
             }
         }
@@ -152,6 +160,7 @@
         h2 {
             font-size: 25px;
             font-weight: bold;
+            color: @headerImagesColor;
         }
     }
 
