--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/layout.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/layout.less
@@ -496,13 +496,12 @@ Page footer
         display: none;
         right: 60px;
         cursor: pointer;
-
-        
     }
+
     @media (max-width: 768px) {
-            //override inline styling
-            display: none !important;
-        }
+        //override inline styling
+        display: none !important;
+    }
 }
 
 
@@ -849,6 +848,48 @@ Page Loading
         display: inline-block;
         width: 300px;
         /*white-space: pre-wrap;*/
+        color: #fff;
+    }
+
+    .facebook {
+        background: #3b5998;
+        color: #fff;
+    }
+
+    .fbImg:after, .emailImg:after {
+        background: #fff;
+    }
+
+    .svg-fb {
+        fill: #fff;
+    }
+
+    .emailImg:after {
+        background: #676767;
+    }
+
+    .svg-email {
+        fill: silver;
+    }
+
+    .addConnect {
+        color: @textColorSpitballBlue;
+    }
+
+    .facebook, .google {
+        background: #3a5795;
+        color: #fff;
+    }
+
+    .facebook svg,
+    .google svg {
+        fill: #fff;
+    }
+
+    .google {
+        color: #676767;
+        //background: #fff;
+        background: #DD4B39;
     }
 
     .text {
