--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/leaderboard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/leaderboard.less
@@ -9,6 +9,7 @@
         margin-top: 0;
         text-align: center;
         margin-bottom: 10px;
+            color: @textColorGrey;
 
         @media (min-width:960px) {
             font-size: 1.2vw;
@@ -32,6 +33,7 @@
         overflow: hidden;
         white-space: nowrap;
         vertical-align: middle;
+            color: @textColorWhite;
     }
 
     .img-circle {
@@ -52,6 +54,7 @@
     .r-table-cell {
         width: ~"calc(100% - 75px)";
         text-align: left;
+                color: @textColorOrange;
 
         &:nth-child(even) {
             width: 15px;
