--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/library.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/library.less
@@ -40,11 +40,18 @@
     .department-wrap {
         position: relative;
 
-        .status-title{
+        .status-title {
             color: @textColorWhite;
         }
     }
 
+    .department {
+        color: @textColorWhite;
+    }
+
+    .dots-3 {
+        fill: @backgroundColorWhite;
+    }
     /*.department {
         border-radius: 0;
         box-shadow: 0px 1px 5px 0 rgba(0, 0, 0, 0.34);
@@ -80,7 +87,6 @@
             }
         }
     }*/
-
     .back-arrow {
         svg {
             fill: @textColorWhite;
